# ompi

./: configure.ac
man/: README.sh  conf.py  fix_md_rst.py  fixup_rst.py  index.rst
man/rst/: conf.py  index.rst
man/rst/ompi/mpi/man/man3/: MPI_Abort.3.rst  MPI_Accumulate.3.rst  MPI_Add_error_class.3.rst  MPI_Add_error_code.3.rst  MPI_Add_error_string.3.rst  MPI_Address.3.rst  MPI_Aint_add.3.rst  MPI_Aint_diff.3.rst  MPI_Allgather.3.rst  MPI_Allgatherv.3.rst  MPI_Alloc_mem.3.rst  MPI_Allreduce.3.rst  MPI_Alltoall.3.rst  MPI_Alltoallv.3.rst  MPI_Alltoallw.3.rst  MPI_Attr_delete.3.rst  MPI_Attr_get.3.rst  MPI_Attr_put.3.rst  MPI_Barrier.3.rst  MPI_Bcast.3.rst  MPI_Bsend.3.rst  MPI_Bsend_init.3.rst  MPI_Buffer_attach.3.rst  MPI_Buffer_detach.3.rst  MPI_Cancel.3.rst  MPI_Cart_coords.3.rst  MPI_Cart_create.3.rst  MPI_Cart_get.3.rst  MPI_Cart_map.3.rst  MPI_Cart_rank.3.rst  MPI_Cart_shift.3.rst  MPI_Cart_sub.3.rst  MPI_Cartdim_get.3.rst  MPI_Close_port.3.rst  MPI_Comm_accept.3.rst  MPI_Comm_c2f.3.rst  MPI_Comm_call_errhandler.3.rst  MPI_Comm_compare.3.rst  MPI_Comm_connect.3.rst  (+379 more)
ompi/group/: group.c  group.h
ompi/mca/mtl/ofi/: Makefile.am  configure.m4  mtl_ofi_component.c
ompi/mca/osc/base/: osc_base_init.c
ompi/mca/osc/fsm/: Makefile.am  configure.m4  osc_fsm.h  osc_fsm_active_target.c  osc_fsm_comm.c  osc_fsm_component.c  osc_fsm_passive_target.c  owner.txt
ompi/mpi/c/: win_allocate_shared.c
opal/mca/btl/ofi/: btl_ofi_module.c  btl_ofi_rdma.c
opal/mca/common/ofi/: Makefile.am  common_ofi.c  common_ofi.h  configure.m4
opal/mca/memory/patcher/: configure.m4
(+221 files in other folders)
